--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "csvtojson": "^2.0.10",
     "firebase": "^10.11.0",
     "fs": "^0.0.1-security",
-    "lucide-react": "^0.372.0",
+    "lucide-react": "^0.373.0",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1"
