--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cmdk": "^1.0.0",
     "csv": "^6.3.10",
     "csvtojson": "^2.0.10",
+    "dayjs": "^1.11.13",
     "firebase": "^10.11.0",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.373.0",
